# lispizzle

./: Cargo.toml
.cargo-husky/hooks/: pre-push  precommit-hook
benches/: README.md  skip_characters.rs
examples/: 1.zle  lists.zle  macros.zle
src/: backtrace.rs  context.rs  environment.rs  error.rs  eval.rs  lambda.rs  lib.rs  main.rs  proc.rs  program.rs  special.rs  str_cache.rs  string.rs  symbol.rs  util.rs  value.rs  var.rs
src/environment/: bag.rs  default.rs  mod.rs  proc.rs
src/environment/default/: lists.rs  mod.rs  numbers.rs  procs.rs  strings.rs  util.rs
src/parser/: error.rs  location.rs  mod.rs  span.rs
src/parser/reader/: cache.rs  input.rs  mod.rs  str_reader.rs  util.rs
src/proc/: lisp.rs  mod.rs  native.rs
src/value/: macroexpand.rs  mod.rs
